syntax = "proto3";

package mlmbox.client.auth;

import "mlmbox/types/account.proto";
import "mlmbox/types/status.proto";
import "google/protobuf/empty.proto";

service Auth {
  rpc TelegramBotSign (TelegramBotSignRequest) returns (AuthSignResponse) {} // authorization
  rpc TokenValidate (google.protobuf.Empty) returns (TokenValidateResponse) {} // token validity check
  rpc TokenGenerate (mlmbox.types.Account.Id) returns (TokenGenerateResponse) {} // admin - method for generating a token
  rpc RemoteSignIn (google.protobuf.Empty) returns (stream RemoteSignInEvent) {}
}

message TelegramBotSignRequest {
  uint32 channel_id = 1;
  string init_data = 2;
}
message AuthSignResponse {
  mlmbox.types.Status.Auth auth_status = 1; // Authentication status
  mlmbox.types.Status.Referral referral_status = 2; // Referral status
  string access_token = 3; // The token is used in the "authorization: X.Y.Z" header to make authorized API requests
}
message TokenValidateResponse {
  mlmbox.types.Status.TokenValidate status = 1;
}
message TokenGenerateResponse {
  string access_token = 1;
}
message RemoteSignInEvent {
  message SecretCode {
    string value = 1;
    uint32 expired_at = 2;
  }
  message Waiting {
    mlmbox.types.Account.Info account = 1;
    uint32 expired_at = 2;
  }
  oneof event {
    string guest_access_token = 1;
    SecretCode secret_code = 2;
    Waiting waiting = 3;
    string account_access_token = 4;
    mlmbox.types.Account.Info canceled = 5;
    mlmbox.types.Account.Info waiting_expired = 6;
    uint32 expired_at = 7;
  }
}